...
        let plusIcon = UIImage(systemName: "plus.circle")
        let button: UIBarButtonItem = UIBarButtonItem(
            image: plusIcon, style: .plain, target: self, action: #selector(tappedAddItemButton))
        button.tintColor = .blue
        
        #if DEBUG
        button.accessibilityIdentifier = "mainViewController.button.addItem"
        #endif
        
        return button
    }()
    
    lazy var logOutButton: UIBarButtonItem = {
...
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.tableFooterView = UIView()
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(TodoItemCell.self, forCellReuseIdentifier: TodoItemCell.cellName)
        tableView.accessibilityIdentifier = "mainViewController.table"
        return tableView
    }()
    
    let viewModel: MainViewModelProtocol
    
    init(viewModel: MainViewModelProtocol) {
...
